Fixes bottom-sheet dark mode

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -43,11 +43,9 @@
 }
 
 /* Custom styling for react-spring-bottom-sheet */
-@media (prefers-color-scheme: dark) {
-  [data-rsbs-root] {
-    --rsbs-bg: theme(colors.gray.900);
-    --rsbs-handle-bg: rgba(255, 255, 255, 0.2);
-  }
+.dark [data-rsbs-root] {
+  --rsbs-bg: theme(colors.gray.900);
+  --rsbs-handle-bg: rgba(255, 255, 255, 0.2);
 }
 [data-rsbs-header] {
   padding-bottom: 0;
